NEW Added css to login and added registration page

--- a/frontend/vite-project/src/Components/Layout.css
+++ b/frontend/vite-project/src/Components/Layout.css
@@ -41,6 +41,50 @@
   flex-grow: 1;
 }
 
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+}
+
+.login-form h1 {
+  margin-bottom: 10px;
+}
+
+.login-form label {
+  margin: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.login-form input {
+  margin-left: 10px;
+}
+
+.login-form input[type="submit"] {
+  width: 100px;
+  margin-top: 10px;
+}
+.login-form input[type="text"],
+.login-form input[type="password"] {
+  flex-grow: 1;
+}
+
+.register-link {
+  color: white;
+  text-align: center;
+  display: block;
+  margin-top: 20px;
+}
 @media (max-width: 767px) {
   .background {
     min-height: 100%;
