--- a/frontend/vite-project/src/Pages/LocationPage.css
+++ b/frontend/vite-project/src/Pages/LocationPage.css
@@ -20,7 +20,7 @@
   align-items: center;
   height: 100%;
   flex-direction: column;
-  margin: 30px;
+  margin: 0px, 30px, 30px, 20px;
   padding: 0;
 }
 .weather-day {
