--- a/frontend/vite-project/src/Pages/FavouriteLocationsPage.css
+++ b/frontend/vite-project/src/Pages/FavouriteLocationsPage.css
@@ -25,6 +25,19 @@
 .location-decoration {
   font-size: 40px;
 }
+/* Location Page Css */
+.containerLayout {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+/* Map Container css */
+.mapContainer {
+  height: 500px;
+  width: 100%;
+  flex: 1 0 60%;
+}
 
 /* Place css */
 .place-button {
@@ -57,6 +70,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+/* Weather Container */
+.weatherContainer {
+  flex: 1 0 40%;
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
